--- a/AniCookServe/AniCookServe/Properties/Resources.resx
+++ b/AniCookServe/AniCookServe/Properties/Resources.resx
@@ -157,4 +157,7 @@
   <data name="tumblr_m7q8i1Yjuq1qje0q4o1_5001" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tumblr_m7q8i1Yjuq1qje0q4o1_500.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="deactivatedFoodKeyBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\deactivatedFoodKeyBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
